# ogscli

./: LICENSE  README.md  pyproject.toml
ogs_cli/: cli.py  go_utils.py
